--- a/views/admin/adminhome.hbs
+++ b/views/admin/adminhome.hbs
@@ -53,7 +53,7 @@
                 margin-right: 2px;
             }
         </style>
-
+<h1>hai</h1>
         <!-- Sidebar Start -->
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-light navbar-light">
