--- a/views/users/userProfile.hbs
+++ b/views/users/userProfile.hbs
@@ -392,12 +392,21 @@
                         <a href="/userAddress"><button class="btn btn-primary" data-link-action="sign-in" type="submit">
                                 view Address
                             </button></a>
+                            <br>
+                            <a href="/userorderDetail"><button class="btn btn-primary" data-link-action="sign-in" type="submit">
+                                Order Detail
+                            </button></a>
+                            <br>
+                            <a href="/walletHistory"><button class="btn btn-primary" data-link-action="sign-in" type="submit">
+                                wallet History
+                            </button></a>
+                            
                         
-                        <div class="order">
+                        {{!-- <div class="order">
                             <a href="/userorderDetail" class="order-detail-btn">
                                 <img src="path/to/logo.png" alt="Order Detail" class="logo">
                             </a>
-                        </div>
+                        </div> --}}
                     
 
                     </div>
