--- a/views/admin/adminhome.hbs
+++ b/views/admin/adminhome.hbs
@@ -53,7 +53,7 @@
                 margin-right: 2px;
             }
         </style>
-<h1>hai</h1>
+
         <!-- Sidebar Start -->
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-light navbar-light">
@@ -314,7 +314,7 @@
 
             <!-- Footer Start -->
             <div class="container-fluid pt-4 px-4">
-                <div class="bg-light rounded-top p-4">
+                {{!-- <div class="bg-light rounded-top p-4">
                     <div class="row">
                         <div class="col-12 col-sm-6 text-center text-sm-start">
                             &copy; <a href="#">Your Site Name</a>, All Right Reserved.
@@ -327,7 +327,7 @@
                                 target="_blank">ThemeWagon</a>
                         </div> --}}
                     </div>
-                </div>
+                </div> --}}
                 {{!--
                 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                 <script src="/javascripts/chart.js"></script> --}}
