--- a/views/admin/coupon.hbs
+++ b/views/admin/coupon.hbs
@@ -259,7 +259,7 @@
 
             <!-- Footer Start -->
             <div class="container-fluid pt-4 px-4">
-                <div class="bg-light rounded-top p-4">
+                {{!-- <div class="bg-light rounded-top p-4">
                     <div class="row">
                         <div class="col-12 col-sm-6 text-center text-sm-start">
                             &copy; <a href="#">Your Site Name</a>, All Right Reserved.
@@ -269,7 +269,7 @@
                             Designed By <a href="https://htmlcodex.com">HTML Codex</a>
                         </div>
                     </div>
-                </div>
+                </div> --}}
             </div>
             <!-- Footer End -->
         </div>
