--- a/views/admin/editCategory.hbs
+++ b/views/admin/editCategory.hbs
@@ -65,11 +65,11 @@
                     <a href="/admin/home" class="nav-item nav-link"><i
                             class="fa fa-tachometer-alt me-2"></i>DASHBOARD</a>
                     <a href="/admin/userList" class="nav-item nav-link"><i class="fa fa-th me-2"></i>CUSTOMER</a>
-                    <a href="/admin/categoryList" class="nav-item nav-link "><i
+                    <a href="/admin/categoryList" class="nav-item nav-link active"><i
                             class="fa fa-keyboard me-2"></i>CATEGORY</a>
-                    <a href="/admin/productList" class="nav-item nav-link active"><i
+                    <a href="/admin/productList" class="nav-item nav-link "><i
                             class="fa fa-table me-2"></i>PRODUCTS</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>COUPEN</a>
+                    <a href="/admin/loadCouponPage" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>COUPEN</a>
                 </div>
             </nav>
         </div>
@@ -215,7 +215,7 @@
 
 
             <!-- Footer Start -->
-            <div class="container-fluid pt-4 px-4">
+            {{!-- <div class="container-fluid pt-4 px-4">
                 <div class="bg-light rounded-top p-4">
                     <div class="row">
                         <div class="col-12 col-sm-6 text-center text-sm-start">
@@ -227,7 +227,7 @@
                         </div> --}}
                     </div>
                 </div>
-            </div>
+            </div> --}}
             <!-- Footer End -->
         </div>
         <!-- Content End -->
