--- a/views/admin/editProduct.hbs
+++ b/views/admin/editProduct.hbs
@@ -69,7 +69,7 @@
                             class="fa fa-keyboard me-2"></i>CATEGORY</a>
                     <a href="/admin/productList" class="nav-item nav-link active"><i
                             class="fa fa-table me-2"></i>PRODUCTS</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>COUPEN</a>
+                    <a href="/admin/loadCouponPage" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>COUPEN</a>
                 </div>
             </nav>
         </div>
@@ -248,7 +248,7 @@
 
 
             <!-- Footer Start -->
-            <div class="container-fluid pt-4 px-4">
+            {{!-- <div class="container-fluid pt-4 px-4">
                 <div class="bg-light rounded-top p-4">
                     <div class="row">
                         <div class="col-12 col-sm-6 text-center text-sm-start">
@@ -260,7 +260,7 @@
                         </div> --}}
                     </div>
                 </div>
-            </div>
+            </div> --}}
             <!-- Footer End -->
         </div>
         <!-- Content End -->
