--- a/views/admin/orderDetail.hbs
+++ b/views/admin/orderDetail.hbs
@@ -284,7 +284,7 @@
 
 
             <!-- Footer Start -->
-            <div class="container-fluid pt-4 px-4">
+            {{!-- <div class="container-fluid pt-4 px-4">
                 <div class="bg-light rounded-top p-4">
                     <div class="row">
                         <div class="col-12 col-sm-6 text-center text-sm-start">
@@ -299,7 +299,7 @@
                         </div> --}}
                     </div>
                 </div>
-            </div>
+            </div> --}}
             <!-- Footer End -->
         </div>
         <!-- Content End -->
